# asr-tts

flutter_asr_client/: README.md  dart_test.yaml  pubspec.yaml
flutter_asr_client/android/: build.gradle.kts  settings.gradle.kts
flutter_asr_client/android/app/: build.gradle.kts
flutter_asr_client/integration_test/: app_flow_test.dart
flutter_asr_client/ios/Runner/: Info.plist
flutter_asr_client/ios/Runner.xcodeproj/: project.pbxproj
flutter_asr_client/lib/: app.dart  main.dart
flutter_asr_client/lib/common/: constants.dart
flutter_asr_client/lib/models/: conversation.dart  report.dart  task.dart  user_profile.dart  websocket_message.dart
flutter_asr_client/lib/providers/: audio_providers.dart  profile_providers.dart  report_providers.dart  settings_providers.dart  task_providers.dart  websocket_providers.dart
flutter_asr_client/lib/router/: app_router.dart
flutter_asr_client/lib/services/: audio_capture_service.dart  mock_data_service.dart  settings_service.dart  websocket_service.dart
flutter_asr_client/lib/theme/: app_colors.dart  app_theme.dart
flutter_asr_client/linux/: CMakeLists.txt
flutter_asr_client/linux/runner/: my_application.cc
flutter_asr_client/macos/Runner.xcodeproj/: project.pbxproj
flutter_asr_client/web/: index.html  manifest.json
flutter_asr_client/windows/: CMakeLists.txt
tts-qt-client/: run_tts.sh
tts-qt-client/client/: CMakeLists.txt  Info.plist  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  ttsclient.cpp  ttsclient.h
tts-qt-client/tts_server/: server.py
whisper-qt-client/: README.md  requirements.txt  startclient.sh  startserver.sh
whisper-qt-client/client/: CMakeLists.txt  Info.plist  asrclient.cpp  asrclient.h  audiocapture.h  audiocapture.mm  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
whisper-qt-client/whisper_asr/: __init__.py  audio_processor.py  engine.py  qwen_engine.py  server.py  transcript_processor.py
(+41 files in other folders)
